objects/SVMXC__RMA_Shipment_Order__c.object
<CustomObject>
    <description>Parts Order is an object to handle parts logistics. With record type RMA, it is a document that authorizes products or parts to be returned to the manufacturer/repair center/warehouse. With record type Shipment,  it is an internal document that authorizes products or parts to be shipped to a customer or field inventory location. ServiceMax uses a common tab Parts Orders as a home for RMA and Shipment orders both.</description>
    <fields>
        <fullName>Air_Waybill_Number__c</fullName>
        <description>Outgoing Carrier Air Waybill No.</description>
        <inlineHelpText>Outgoing Carrier Air Waybill No.</inlineHelpText>
        <label>Air Waybill Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attn__c</fullName>
        <inlineHelpText>Who should the Shipment be addressed to.</inlineHelpText>
        <label>ATTN:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Code_Second_Level__c</fullName>
        <description>Failure Code Second Level</description>
        <label>Failure Code Second Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Code__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>27V Path</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Board Level</fullName>
                </value>
                <value>
                    <fullName>Bootup</fullName>
                </value>
                <value>
                    <fullName>bracket</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>Chip</fullName>
                </value>
                <value>
                    <fullName>Contaminated</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>C-Stack</fullName>
                </value>
                <value>
                    <fullName>Customer Power</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>DCB</fullName>
                </value>
                <value>
                    <fullName>Dead on Arrival</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>DIAG</fullName>
                    <default>true</default>
                    <label>DIAG</label>
                </value>
                <value>
                    <fullName>Diags</fullName>
                </value>
                <value>
                    <fullName>DIMMs</fullName>
                </value>
                <value>
                    <fullName>Down Rev</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic ID</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Fan</fullName>
                </value>
                <value>
                    <fullName>Fan Controller</fullName>
                </value>
                <value>
                    <fullName>Firmware</fullName>
                </value>
                <value>
                    <fullName>Front Cover</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code_Third_Level__c</fullName>
        <label>Failure Code Third Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Code_Second_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABIST</fullName>
                </value>
                <value>
                    <fullName>Air Condition</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>CDP Cable</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>C-stack</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>DCB</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>DCC_CON1</fullName>
                </value>
                <value>
                    <fullName>DCC_CON2</fullName>
                </value>
                <value>
                    <fullName>DCC_CON3</fullName>
                </value>
                <value>
                    <fullName>Dcc_con 4</fullName>
                </value>
                <value>
                    <fullName>DCC_MEM</fullName>
                </value>
                <value>
                    <fullName>down rev</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>edram</fullName>
                </value>
                <value>
                    <fullName>Embedded Memory</fullName>
                </value>
                <value>
                    <fullName>filler tank</fullName>
                </value>
                <value>
                    <fullName>fitting</fullName>
                </value>
                <value>
                    <fullName>Fittings</fullName>
                </value>
                <value>
                    <fullName>Glitch</fullName>
                </value>
                <value>
                    <fullName>heat exchanger</fullName>
                </value>
                <value>
                    <fullName>Hi/Lo Pressure</fullName>
                </value>
                <value>
                    <fullName>HiPot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <description>Failure Code</description>
        <label>Failure Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12V PSU</fullName>
                </value>
                <value>
                    <fullName>24V PSU</fullName>
                </value>
                <value>
                    <fullName>27V PSU</fullName>
                </value>
                <value>
                    <fullName>ART</fullName>
                </value>
                <value>
                    <fullName>B2B Cable</fullName>
                </value>
                <value>
                    <fullName>Back Plane</fullName>
                </value>
                <value>
                    <fullName>Buffer Cable</fullName>
                </value>
                <value>
                    <fullName>Buffer Card</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Clock Cable</fullName>
                </value>
                <value>
                    <fullName>Cooling</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>Down Rev Part</fullName>
                </value>
                <value>
                    <fullName>Fan</fullName>
                </value>
                <value>
                    <fullName>HDDC</fullName>
                </value>
                <value>
                    <fullName>Interposer</fullName>
                </value>
                <value>
                    <fullName>Logic Board</fullName>
                </value>
                <value>
                    <fullName>LVPSU</fullName>
                </value>
                <value>
                    <fullName>MBS Box</fullName>
                </value>
                <value>
                    <fullName>MBS Cable</fullName>
                </value>
                <value>
                    <fullName>MCM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NCC</fullName>
                </value>
                <value>
                    <fullName>NMP</fullName>
                </value>
                <value>
                    <fullName>OCA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Location_City__c</fullName>
        <formula>SVMXC__Source_Location__r.SVMXC__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Location_Country__c</fullName>
        <formula>Text(SVMXC__Source_Location__r.SVMXC__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Location_State__c</fullName>
        <formula>SVMXC__Source_Location__r.SVMXC__State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Location_Street__c</fullName>
        <formula>SVMXC__Source_Location__r.SVMXC__Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Location_Zip__c</fullName>
        <formula>SVMXC__Source_Location__r.SVMXC__Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HFE_Resolution__c</fullName>
        <description>HFE Resolution</description>
        <label>HFE Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <formula>Installed_Product__r.Host_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Serial_No__c</fullName>
        <formula>Installed_Product__r.SVMXC__Serial_Lot_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product Serial No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax.</description>
        <inlineHelpText>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax.</inlineHelpText>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Parts Orders/RMA</relationshipLabel>
        <relationshipName>Parts_Orders_RMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Occurrence_Date__c</fullName>
        <label>Issue Occurrence Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Return_Carrier__c</fullName>
        <description>Name of Return Carrier if &quot;Other&quot; Selected</description>
        <inlineHelpText>Name of Return Carrier if &quot;Other&quot; Selected</inlineHelpText>
        <label>Other Return Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>If failure code is Other, enter the reason here</description>
        <inlineHelpText>If failure code is Other, enter the reason here</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outgoing_Shipping_Number__c</fullName>
        <description>Outgoing Shipping Number</description>
        <inlineHelpText>Outgoing Shipping Number</inlineHelpText>
        <label>Outgoing Shipping Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Level__c</fullName>
        <description>Patch Level</description>
        <label>Patch Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plant_Location__c</fullName>
        <description>Plant Location - added to Parts Order for use in SFM to create WO from Parts Order/RMA</description>
        <label>Plant Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1140</fullName>
                </value>
                <value>
                    <fullName>1141</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <description>Detailed description of the problem as reported by the customer</description>
        <inlineHelpText>Detailed description of the problem as reported by the customer</inlineHelpText>
        <label>Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product in which specialization would be required to service the work order. Calculated from installed product by OptiMax pre-calculation engine.</description>
        <inlineHelpText>Product in which specialization would be required to service the work order. Calculated from installed product by OptiMax pre-calculation engine</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parts Orders/RMA</relationshipLabel>
        <relationshipName>Parts_Orders_RMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Received_Date__c</fullName>
        <description>RMA Received Date</description>
        <label>RMA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Shipped_Date__c</fullName>
        <description>Date new/replacement part sent to technician.</description>
        <inlineHelpText>Date new/replacement part sent to technician.</inlineHelpText>
        <label>RMA Shipped Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <description>Resolution Code</description>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Power cycle</fullName>
                </value>
                <value>
                    <fullName>NCC Reboot</fullName>
                </value>
                <value>
                    <fullName>Configmgr reset</fullName>
                </value>
                <value>
                    <fullName>FW upgrade</fullName>
                </value>
                <value>
                    <fullName>Patch/Hotfix</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Reseated</fullName>
                </value>
                <value>
                    <fullName>Repaired</fullName>
                </value>
                <value>
                    <fullName>Environment Problem Resolved (cooling / power)</fullName>
                </value>
                <value>
                    <fullName>Reinstall</fullName>
                </value>
                <value>
                    <fullName>Replace Host</fullName>
                </value>
                <value>
                    <fullName>Not reproducible</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Markout</fullName>
                </value>
                <value>
                    <fullName>FPGA Reload</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>Host Reboot</fullName>
                </value>
                <value>
                    <fullName>Reimaged</fullName>
                </value>
                <value>
                    <fullName>Upgraded</fullName>
                </value>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>re-calibrated coolant level sensor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Carrier_from_Co__c</fullName>
        <description>Return Carrier from Company (Name)</description>
        <inlineHelpText>Return Carrier from Company (Name)</inlineHelpText>
        <label>Return Carrier from Co.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>CEVA</fullName>
                </value>
                <value>
                    <fullName>IFS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Shipping_Number__c</fullName>
        <description>Return Shipping Number from Company (Name)</description>
        <inlineHelpText>Return Shipping Number from Company (Name)</inlineHelpText>
        <label>Return Shipping Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Notification_Number__c</fullName>
        <description>This is the SAP Notification Number</description>
        <inlineHelpText>Enter the SAP Notification Number</inlineHelpText>
        <label>SAP Notification Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Address_Type__c</fullName>
        <description>Address Type</description>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Billing Address</fullName>
                </value>
                <value>
                    <fullName>Account Shipping Address</fullName>
                </value>
                <value>
                    <fullName>Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Contact Other Address</fullName>
                </value>
                <value>
                    <fullName>Installed Product Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Bill_To__c</fullName>
        <description>Indicates who should be billed for shipping charges</description>
        <inlineHelpText>Indicates who should be billed for shipping charges</inlineHelpText>
        <label>Bill To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sender</fullName>
                </value>
                <value>
                    <fullName>Recipient</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Type__c</fullName>
        <description>Whether the billing is covered by an agreement or this is a paid shipment</description>
        <inlineHelpText>Whether the billing is covered by an agreement or this is a paid shipment</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Empowerment</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Courtesy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that canceled this RMA/shipment order.</description>
        <inlineHelpText>User that canceled this RMA/shipment order.</inlineHelpText>
        <label>Canceled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RMA_Shipment_Order_Canceled_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_On__c</fullName>
        <description>Date/time when this RMA/shipment order was canceled.</description>
        <inlineHelpText>Date/time when this RMA/shipment order was canceled.</inlineHelpText>
        <label>Canceled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Case related to this RMA or shipment. Is a lookup to an existing salesforce case record</description>
        <inlineHelpText>Support Case related to this RMA or shipment. Is a lookup to an existing salesforce case record</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>RMA_Shipment_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that closed this RMA/Shipment order</description>
        <inlineHelpText>User that closed this RMA/Shipment order</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RMA_Shipment_Order_Closed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Date/time when this RMA/shipment order was closed</description>
        <inlineHelpText>Date/time when this RMA/shipment order was closed</inlineHelpText>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account from/to which this RMA/shipment is made. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Company from/to which this RMA/shipment is made. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts Orders (Account)</relationshipLabel>
        <relationshipName>RMA_Shipment_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the contact person from the customer account connected with this RMA/shipment order. Is a lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the contact person from the customer account connected with this RMA/shipment order. Is a lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>RMA_Shipment_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Delivery_Option__c</fullName>
        <description>Indicates special delivery requirements such as Saturday delivery etc.</description>
        <inlineHelpText>Indicates special delivery requirements such as Saturday delivery etc.</inlineHelpText>
        <label>Delivery Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Two Day</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Destination_City__c</fullName>
        <description>“City” part of the destination address</description>
        <inlineHelpText>“City” part of the destination address</inlineHelpText>
        <label>To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Destination_Country__c</fullName>
        <description>“Country” part of the destination address</description>
        <inlineHelpText>“Country” part of the destination address</inlineHelpText>
        <label>To Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Destination_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the internal/customer site to which the products are shipped. Is a lookup to an existing site record in ServiceMax</description>
        <inlineHelpText>Name of the internal/customer site to which the products are shipped. Is a lookup to an existing site record in ServiceMax. Choose an existing site OR enter address details.</inlineHelpText>
        <label>To Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Parts Orders (Destination Location)</relationshipLabel>
        <relationshipName>RMA_Shipment_Order_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Destination_State__c</fullName>
        <description>“State/Province” part of the destination address</description>
        <inlineHelpText>“State/Province” part of the destination address</inlineHelpText>
        <label>To State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Destination_Street__c</fullName>
        <description>“Street” part of the destination address</description>
        <inlineHelpText>“Street” part of the destination address</inlineHelpText>
        <label>To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Destination_Zip__c</fullName>
        <description>“Zip/Postal Code” part of the destination address</description>
        <inlineHelpText>“Zip/Postal Code” part of the destination address</inlineHelpText>
        <label>To Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__EndpointURL__c</fullName>
        <description>Not used</description>
        <formula>$Api.Enterprise_Server_URL_70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndpointURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Expected_Delivery_Date__c</fullName>
        <description>Date when the products are expected to be shipped to the customer. Useful for planning and allocating resources</description>
        <inlineHelpText>Date when the products are expected to be shipped to the customer. Useful for planning and allocating resources</inlineHelpText>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Expected_Receive_Date__c</fullName>
        <description>Date when the products are expected at the receiving dock. Useful for planning and allocating resources</description>
        <inlineHelpText>Date when the products are expected at the receiving dock. Useful for planning and allocating resources</inlineHelpText>
        <label>Expected Receipt Date</label>
        <type>Date</type>
    </fields>
</CustomObject>